@@ -1,3 +1,13 @@
+2007-05-07  Hans Boehm <Hans.Boehm@hp.com> (with help from Philipp Zambelli)
+	* src/atomic_ops/sysdeps/msftc/x86.h: Don't just assume that mfence
+	is present.
+	* src/atomic_ops/sysdeps/gcc/arm.h (AO_test_and_set_full): Correct
+	oldval type.
+
+2006-11-09 Earl Chew (Agilent)
+	* msftc/x86.h: Follow Microsoft documentation and include
+	windows.h.
+
 [1.2 release]
 
 2006-07-11 Hans Boehm <Hans.Boehm@hp.com>
